# cmake-discover-tests

./: CMakeLists.txt  DiscoverTests.cmake  README.md
Boost/: CMakeLists.txt  main.cpp  math.cpp  string.cpp
CMake/: CMakeLists.txt  math.c  string.c
Catch2/: CMakeLists.txt  main.cpp
GLib/: CMakeLists.txt  main.c
GTest/: CMakeLists.txt  main.cpp
QTest/: CMakeLists.txt  math.cpp  string.cpp
SDL3/: CMakeLists.txt  main.c
cmocka/: CMakeLists.txt  math.c  string.c
doctest/: CMakeLists.txt  main.cpp
pytest/: CMakeLists.txt  test_main.py
